--- a/onlineShoppingStore/onlineShoppingStore.csproj
+++ b/onlineShoppingStore/onlineShoppingStore.csproj
@@ -208,15 +208,18 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\0_03_21_2017_08_03_26.jpg" />
     <Content Include="Images\2_03_21_2017_08_15_59.jpg" />
     <Content Include="Images\81_12_24_2017_10_26_28.jpg" />
     <Content Include="Images\85_05_20_2018_11_20_09.jpg" />
+    <Content Include="Images\searchIcon.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\dbScript.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
